Fix .display color to have more contrast with inverse class

--- a/static/slides/tune-better-models/xaringan-themer.css
+++ b/static/slides/tune-better-models/xaringan-themer.css
@@ -392,5 +392,5 @@ h3 {
   color: #222222;
 }
 .display {
-  color: #D47500;
+  color: #073949;
 }
